[project]
name = "task-barn"
version = "0.2.0"
authors = [
#  { name="Bibenga", email="" },
]
description = "Lightweight scheduler and worker for Django using a database backend"
license = {text = "MIT"}
readme = "README.md"
keywords = ["django", "distributed", "multiprocessing", "task", "scheduler"]
classifiers = [
    'Environment :: Web Environment',
    'Framework :: Django',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    "Operating System :: OS Independent",
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Topic :: Internet :: WWW/HTTP',
    'Topic :: System :: Distributed Computing',
    'Topic :: Software Development :: Libraries :: Python Modules',
]

requires-python = ">=3.10"
dependencies = [
    "django>=5,<6",
]

[project.optional-dependencies]
croniter = [
    "croniter>=2,<3",
]
test = [
    "pytest",
    "pytest-django",
    "pytest-mock",
    "pytest-asyncio",
    "psycopg[binary]"
]

[project.urls]
Homepage = "https://github.com/bibenga/barn-py"
Issues = "https://github.com/bibenga/barn-py/issues"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["barn"]

